# devicesettings

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  build.sh  build_dependencies.sh  cmd  configure  configure.ac  cov_build.sh  rdk_build.sh  rdk_env.xml
.github/: CODEOWNERS
autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.3
cfg/: config.h.in
ds/: Makefile  Makefile.am  Makefile.in  aspectRatio.cpp  audioCompression.cpp  audioEncoding.cpp  audioOutputPort.cpp  audioOutputPortConfig.cpp  audioOutputPortConfig.hpp  audioOutputPortType.cpp  audioStereoMode.cpp  compositeIn.cpp  dslogger.cpp  edid-parser.cpp  frameRate.cpp  frontPanelConfig.cpp  frontPanelIndicator.cpp  frontPanelTextDisplay.cpp  hdmiIn.cpp  host.cpp  iarmHdmiIn.cpp  iarmProxy.cpp  iarmProxy.hpp  init.cpp  manager.cpp  manager_BACKUP_71676.cpp  pixelResolution.cpp  sleepMode.cpp  stereoScopicMode.cpp  videoDFC.cpp  videoDevice.cpp  videoDeviceConfig.cpp  videoDeviceConfig.hpp  videoOutputPort.cpp  videoOutputPortConfig.cpp  videoOutputPortConfig.hpp  videoOutputPortType.cpp  videoResolution.cpp
hal-configs/: Makefile  dsAudioSettings.cpp  dsFPDSettings.cpp  dsVideoDeviceSettings.cpp  dsVideoPortSettings.cpp  dsVideoResolutionSettings.h
ipk/: control
patches/: dsDisplay.patch
rpc/: Makefile
rpc/cli/: Makefile  Makefile.am  Makefile.in  dsAudio.c  dsCompositeIn.c  dsConnectionManager.cpp  dsConnectionManager.h  dsController-com.cpp  dsController-com.h  dsDisplay.c  dsFPD-com.cpp  dsFPD.c  dsHdmiIn-com.cpp  dsHdmiIn.c  dsHost.cpp  dsVideoDevice.c  dsVideoPort.c  dsclientlogger.c
sample/: DSCliLibStandaloneApp.cpp  IsOutputHDR.cpp  Makefile  dsMenuClient.cpp  dsMenuClientbkp.cpp  dsMgr-test.c  enableSurroundDecoder.cpp  getAudioConfig.cpp  getCPUTemp.cpp  getDSHalVersion.cpp  getDrmHdmiStatus.cpp  (+39 more)
(+83 files in other folders)
